--- a/Code/index.html
+++ b/Code/index.html
@@ -34,18 +34,21 @@
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div class="article">
-          <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <h2>Correlations Discovered Between Poverty and Lack of Healthcare</h2>
+          
+          <p>States that have high levels of poverty also have poor healthcare.</p>
+          <ul>
+            <li>Mississipi has the highest rate of poverty (21.5%) 
+              and 18.8% of the people in Mississipi do not have healthcare.</li>
+            <li>Massachusetts on the other hand has the highest percentage of people who have 
+              helathcare. Only 4.6% of the people do not have healthcare. 
+            </li>
+            <li>While Texsas does not have the highest rate of poverty (17.2%) it does have the 
+              highest number of perople who do not have healthcare (24.9%)
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+            </li>
+          </ul>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
         </div>
       </div>
     </div>
